Update Composer File

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "mawdooPackage/searchresults",
     "description": "Get First 10 result from google providers and make user save it with comments",
     "type": "library",
-    "lincense": "MIT",
+    "lincense": "MIT"
     "minimum-stability": "dev",
     "require": {},
     "autoload": {
