Update Composer File

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,11 @@
                 "Mawdoo3\\SearchResults\\sp_mawdoo3_laravel"
             ]
         }
+    },
+    "scripts": {
+        "migrate": [
+            "php artisan migrate:publish vendor/mawdoo3packagetest",
+        ]
     }
     
 }
