Update Composer File

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "scripts": {
         "migrate": [
-            "php artisan migrate:publish vendor/mawdoo3packagetest",
+            "php artisan migrate:publish vendor/mawdoo3packagetest"
         ]
     }
     
