Update Composer File

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "scripts": {
         "migrate": [
-            "php artisan migrate --path=vendor/mawdoo3packagetest/searchresults/src/Migrations"
+            "php artisan vendor:publish vendor/package/mawdoo3packagetest"
         ]
     }
 
